24-Jan-2012 Added command line switch '-scheduler=<type name>', which allows defining a custom scheduler for the build. The class must implement the Opus.Core.IBuildScheduler interface.

24-Jan-2012 Replaced System.String.Format with System.Text.StringBuilder in Opus.Core.Log.

24-Jan-2012 Improved threading support in the background thread of the Opus.Core.BuildManager that processes textual messages from DependencyNode build methods.

23-Jan-2012 Improved threading support in the Opus.Core.BuildManager.

22-Jan-2012 Fixing Null reference exception in QMakeBuilder for C.ObjectFileCollection when it is empty.

22-Jan-2012 Disabling more Qt configurations by default.

22-Jan-2012 Fixing warnings from QtCreator that unquoted backslashes are deprecated for recent executables added to the scripts.

22-Jan-2012 Added VisualC linker option 'IgnoredLibraries', taking an array of strings.

22-Jan-2012 Added VisualC linker option 'StackReserveAndCommit', taking a string of the format 'reserve[,commit]' to set the stack size and, optionally, the commit.

22-Jan-2012 C AdditionalOptions have been moved to the end of the option collection, so that they override all settings before hand.

22-Jan-2012 Versioned compilers with specific option interfaces must also have their C++ equivalents derive from them, in order to propogate the additional C options. (Because of the SetDelegates change.) This still shares a lot of code with the common C++ option collections. This had to be done because C# does not allow deriving from a generic type.

22-Jan-2012 Opus.Core.BaseOptionCollection now has a virtual function SetDelegates(), which is required to be implemented by derived classes in order to assign delegates to handling each option.

22-Jan-2012 Removing 'Commandline: ' prefix from all verbose native build output. It does not improve the readability of the output.
